<resources>
    <string name="app_name">Android Ujikom</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="nim">NIM</string>
    <string name="jurusan">Jurusan</string>
    <string name="latlong">Latlong</string>
    <string name="network_connection">Network Connection</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="maps">Maps</string>
    <string name="analyze">Analyze</string>
    <string name="jumlah">100</string>
    <string name="search">Search</string>
    <string name="masukkan_kata_kunci_pencarian">Masukkan kata kunci pencarian</string>
</resources>